[tool.poetry]
name = "repl-nix-password-generator"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_password_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
password = "^0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
